Added new method in api cities resources
